# dsp-integration/packages/types/src/index.ts
@@ -19,6 +19,8 @@ export type Provider = S['Provider']
 export type AdvertiserSettings = S['AdvertiserSettings']
 export type AdvertiserSettingsInput = S['AdvertiserSettingsInput']
 export type AvailableInventoryRow = S['AvailableInventoryRow']
+export type AssignedTo = S['AssignedTo']
+export type DspAdvertisers = S['DspAdvertisers']
 export type BookingSchedule = S['BookingSchedule']
 export type Advertiser = S['Advertiser']
 export type AdvertiserSetting = S['AdvertiserSetting']
